added text and link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Sam Bischoff's Portfolio</title>
 </head>
 <body>
-    
+    <h1>Sam Bischoff</h1>
+    <p>Hello welcome to my Portfolio<br>
+    I'm a student at DevMountian learning javascript, html, css, sql and node.js<br>
+    This is my Github profile with all my projects</p>
+    <a href="https://github.com/SamB2001">https://github.com/SamB2001</a>
 </body>
 </html>
