fixed some styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <h1>Sam Bischoff</h1>
+    <form class="form" id="intro">
     <p>Hello welcome to my Portfolio<br>
-    I'm a student at DevMountian learning javascript, html, css, sql and node.js<br>
-    This is my Github profile with all my projects</p>
-    <a href="https://github.com/SamB2001">https://github.com/SamB2001</a>
+        I'm a student at DevMountian learning javascript, html, css, sql and node.js<br>
+        This is my Github profile with all my projects</p>
+        <a href="https://github.com/SamB2001">https://github.com/SamB2001</a>
+    </form>
 </body>
 </html>
