--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         This is my Github profile with all my projects</p>
         <a href="https://github.com/SamB2001">https://github.com/SamB2001</a>
     </form>
+    <form id="aboutMe">
+        <h3>About Me</h3>
+        <p>I am a big fan of simplistic desgins.</p>
+    </form>
 </body>
 </html>
