--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Sam Bischoff</h1>
     <form class="form" id="intro">
     <p>Hello welcome to my Portfolio<br>
-        I'm a student at DevMountian learning javascript, html, css, sql and node.js<br>
+        I'm a graduate from DevMountian fluent in javascript, html, css, sql, react and node.js<br>
         This is my Github profile with all my projects</p>
         <a href="https://github.com/SamB2001">https://github.com/SamB2001</a>
     </form>
